fixed spacing

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ html{
     color: white;
     padding: 50px 0px;
     text-align: center;
-    height: 500px;
+    height: 600px;
     width: 90%;
     margin: 0 auto;
     display: flex;
